log
Tue 21 Mar 2023 09:45:01 PM UTC: 
 tests:  0|6
total_score: 0/70
2a10711
Tue 21 Mar 2023 09:45:44 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a5ac433
Tue 21 Mar 2023 10:04:23 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
46c804c
Wed 22 Mar 2023 02:22:12 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
0538262
Thu 23 Mar 2023 03:18:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
11acfa3
Thu 23 Mar 2023 03:24:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0735a0b
Thu 23 Mar 2023 03:26:27 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a5f1fa9
Thu 23 Mar 2023 03:28:30 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
806201d
Thu 23 Mar 2023 03:28:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4661b21
